# firment-base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run-tests.sh  todo.md
cmake/: nanopb_py_env.cmake  version.cmake
inc/: fmt_base_msg.h  fmt_comms.h  fmt_rx.h
pb-plugins/: gen-firment.py  gen-fmt_rx.py  gen-widgets.py
src/: fmt_base.proto  fmt_base_msg.proto  fmt_comms.c  fmt_rx.in.c
test/: CMakeLists.txt  messages.proto  project_msg.h  project_msg.proto
test/fakes/crc/: CMakeLists.txt  crc_mcuDetails.h
test/fakes/queue/: CMakeLists.txt  queue.h  queue_test.c  queue_test.cpp
test/fakes/transport/: CMakeLists.txt  fmt_transport.h  fmt_transport_test.c  fmt_transport_test.h
test/src/: fmt_base_test.cpp  fmt_rx_test.cpp  test_shared.c  test_shared.h
web-ui/: package-lock.json  package.json  tsconfig.json
web-ui/src/: App.css  BrokerAddress.tsx  Reset.tsx  Version.tsx  index.ts  mqclient.ts
